kyverno/policies/disallow-default-namespace.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-default-namespace
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/title: Disallow Default Namespace (Extended)
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/category: Multi-Tenancy
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Mixed
    policies.kyverno.io/description: >
      Disallow usage of the 'default' namespace for workloads and cluster resources.
spec:
  validationFailureAction: Enforce
  background: true
  admission: true
  emitWarning: false
  rules:
  - name: validate-pod-and-controllers-namespace
    match:
      any:
      - resources:
          kinds:
            - Pod
            - Deployment
            - StatefulSet
            - Ingress
    skipBackgroundRequests: true
    validate:
      message: "Using 'default' namespace is not allowed for workload resources."
      allowExistingViolations: true
      pattern:
        metadata:
          namespace: "!default"

  - name: validate-base-resources-namespace
    match:
      any:
      - resources:
          kinds:
            - ConfigMap
            - Secret
            - PersistentVolumeClaim
            - Service
    skipBackgroundRequests: true
    validate:
      message: "Using 'default' namespace is not allowed for base resources."
      allowExistingViolations: true
      pattern:
        metadata:
          namespace: "!default"
